--- a/app/src/main/res/layout/scanbarcode.xml
+++ b/app/src/main/res/layout/scanbarcode.xml
@@ -19,4 +19,13 @@
         android:layout_marginBottom="167dp"
         android:text="Scan Barcode" />
 
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/scan_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-113dp"
+        android:text="Add Product" />
+
 </RelativeLayout>
