--- a/app/src/main/res/layout/activity_store_page.xml
+++ b/app/src/main/res/layout/activity_store_page.xml
@@ -1,36 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:paddingLeft="16dp"
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
     tools:context=".StorePageActivity">
 
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Danh Sách Cửa Hàng"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:layout_marginBottom="16dp" />
+
     <ListView
         android:id="@+id/lvStoreList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:layout_above="@+id/btnAddStore" />
+        android:layout_below="@+id/tvTitle"
+        android:layout_above="@+id/btnAddStore"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tvNoStore"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You don't have any stores yet."
         android:gravity="center"
-        android:visibility="gone"
-        android:textSize="18sp" />
+        android:text="Bạn chưa có cửa hàng nào."
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/btnAddStore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Store"
+        android:layout_width="239dp"
+        android:layout_height="66dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:background="@drawable/login_button_background"
+        android:freezesText="false"
+        android:text="Thêm cửa hàng"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:backgroundTint="#2196F3" />
 
 </RelativeLayout>
