--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/product_background">
 
     <TextView
         android:id="@+id/tvStoreName"
@@ -11,14 +12,20 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:paddingTop="8dp"
-        android:paddingBottom="4dp" />
+        android:paddingBottom="4dp"
+        android:paddingLeft="10dp"
+        android:textColor="@color/black"
+        />
 
     <TextView
         android:id="@+id/tvStoreAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:paddingBottom="8dp" />
+        android:paddingBottom="8dp"
+        android:textColor="@color/black"
+        android:paddingLeft="10dp"
+        />
 
     <View
         android:layout_width="match_parent"
