--- a/app/src/main/res/layout/scanbarcode.xml
+++ b/app/src/main/res/layout/scanbarcode.xml
@@ -1,31 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
         android:id="@+id/scanner_view"
         android:layout_width="wrap_content"
         android:layout_height="414dp"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerInParent="true" />
 
-    <Button
-        android:id="@+id/scan_button"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="167dp"
-        android:text="Scan Barcode" />
-
-    <Button
-        android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/scan_button"
+        android:layout_below="@+id/scanner_view"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-113dp"
-        android:text="Add Product" />
+        android:orientation="vertical">
+
+
+        <Button
+            android:id="@+id/scan_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center|center_horizontal"
+            android:text="Quét"
+            app:backgroundTint="#2196F3" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="4dp"
+            android:text="hoặc"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/add_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thêm Thủ Công"
+            app:backgroundTint="#2196F3" />
+
+    </LinearLayout>
 
 </RelativeLayout>
