--- a/app/src/main/res/layout/activity_add_store.xml
+++ b/app/src/main/res/layout/activity_add_store.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,7 +11,7 @@
         android:id="@+id/textViewStoreName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Store Name"
+        android:text="Tên cửa hàng"
         android:textSize="16sp" />
 
     <EditText
@@ -24,7 +25,7 @@
         android:id="@+id/textViewStoreAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Store Address"
+        android:text="Địa chỉ cửa hàng"
         android:textSize="16sp"
         android:layout_marginTop="16dp" />
 
@@ -40,13 +41,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Store"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        app:backgroundTint="#2196F3"/>
 
     <Button
         android:id="@+id/buttonBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        app:backgroundTint="#13456E"/>
 
 </LinearLayout>
