--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -1,16 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context=".RegisterActivity"
-        android:layout_centerInParent="true">
+        tools:context=".RegisterActivity">
 
         <!-- Email EditText -->
         <ImageView
@@ -64,9 +65,9 @@
             android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:backgroundTint="#2196F3"
             android:text="Đăng ký"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            app:backgroundTint="#2196F3" />
 
     </LinearLayout>
 </RelativeLayout>
