--- a/app/src/main/res/layout/activity_store_page.xml
+++ b/app/src/main/res/layout/activity_store_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -15,20 +15,11 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Danh Sách Cửa Hàng"
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center"
         android:textColor="@color/black"
         android:layout_marginBottom="16dp" />
-
-    <ListView
-        android:id="@+id/lvStoreList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tvTitle"
-        android:layout_above="@+id/btnAddStore"
-        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tvNoStore"
@@ -38,15 +29,17 @@
         android:text="Bạn chưa có cửa hàng nào."
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_below="@id/tvTitle" />
 
     <Button
         android:id="@+id/btnAddStore"
         android:layout_width="239dp"
         android:layout_height="66dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
+        android:layout_below="@id/tvNoStore"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/login_button_background"
+        android:foregroundGravity="center"
         android:freezesText="false"
         android:text="Thêm cửa hàng"
         android:textAlignment="center"
@@ -56,5 +49,35 @@
         android:textStyle="bold"
         android:visibility="visible"
         app:backgroundTint="#2196F3" />
+
+    <Button
+        android:id="@+id/btnProductPage"
+        android:layout_width="239dp"
+        android:layout_height="66dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Trang Sản Phẩm"
+        android:textColor="@color/white"
+        android:background="@drawable/login_button_background"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        app:backgroundTint="#2196F3"
+        android:visibility="gone"
+        android:layout_below="@id/btnAddStore" />
+
+    <Button
+        android:id="@+id/btnOrderPage"
+        android:layout_width="239dp"
+        android:layout_height="66dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Trang Đơn Hàng"
+        android:textColor="@color/white"
+        android:background="@drawable/login_button_background"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        app:backgroundTint="#2196F3"
+        android:visibility="gone"
+        android:layout_below="@id/btnProductPage" />
 
 </RelativeLayout>
