--- a/app/src/main/res/layout/add_product_activity.xml
+++ b/app/src/main/res/layout/add_product_activity.xml
@@ -6,7 +6,14 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Thêm Sản Phẩm"
+            android:textAlignment="center"
+            android:textSize="30dp"
 
+            android:textStyle="bold" />
 
         <EditText
         android:id="@+id/et_id"
@@ -46,21 +53,23 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/login_button_background"
+        android:layout_margin="10dp"
         android:text="Chọn hình ảnh"
         android:textColor="#3F51B5"
         android:textSize="20dp"
         android:textStyle="bold"
         app:backgroundTint="@null" />
 
-    <ImageView
-        android:id="@+id/iv_product_image"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/placeholder_image" />
+        <ImageView
+            android:id="@+id/iv_product_image"
+            android:layout_width="311dp"
+            android:layout_height="206dp"
+            android:layout_gravity="center|center_vertical"
+            android:layout_marginTop="16dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/placeholder_image" />
 
-    <Button
+        <Button
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -78,6 +87,8 @@
             android:id="@+id/btn_back"
             android:layout_width="171dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="20dp"
             android:paddingLeft="0dp"
             android:text="Trở về"
             android:textAlignment="textStart"
@@ -87,5 +98,6 @@
             app:backgroundTint="@color/white"
             app:icon="@drawable/back_arrow"
             app:iconSize="50dp"
-            app:iconTint="#2196F3" />
+            app:iconTint="#2196F3"
+            tools:ignore="RtlCompat" />
     </LinearLayout>
