--- a/app/src/main/res/layout/add_product_activity.xml
+++ b/app/src/main/res/layout/add_product_activity.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+        android:background="@color/white"
+        app:backgroundTint="@color/black">
 
         <TextView
             android:layout_width="match_parent"
@@ -12,42 +14,66 @@
             android:text="Thêm Sản Phẩm"
             android:textAlignment="center"
             android:textSize="30dp"
-
-            android:textStyle="bold" />
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:backgroundTint="@color/black"/>
 
         <EditText
         android:id="@+id/et_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="ID" />
+        android:hint="ID"
+            android:textColor="@color/black"
+            android:visibility="gone"
+            app:backgroundTint="@color/black"/>
 
-    <EditText
-        android:id="@+id/et_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Tên sản phẩm" />
 
-    <EditText
+            <EditText
+                android:id="@+id/et_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Tên sản phẩm"
+                android:textColor="@color/black"
+                android:textColorHint="#555555"
+                app:backgroundTint="@color/black" />
+
+
+        <EditText
         android:id="@+id/et_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Giá tiền" />
+        android:hint="Giá tiền"
+        android:textColor="@color/black"
+            android:textColorHint="#555555"
 
-    <EditText
+            app:backgroundTint="@color/black"/>
+
+
+        <EditText
         android:id="@+id/et_quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Số lượng" />
+        android:hint="Số lượng"
+        android:textColor="@color/black"
+            android:textColorHint="#555555"
 
-    <EditText
+            app:backgroundTint="@color/black"/>
+
+
+        <EditText
         android:id="@+id/et_expiry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Hạn sử dụng"
         android:inputType="none"
-        android:onClick="showDatePickerDialog" />
+        android:onClick="showDatePickerDialog"
+        android:textColor="@color/black"
+            android:textColorHint="#555555"
 
-    <Button
+            app:backgroundTint="@color/black"/>
+
+
+        <Button
         android:id="@+id/btn_select_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,8 +88,8 @@
 
         <ImageView
             android:id="@+id/iv_product_image"
-            android:layout_width="311dp"
-            android:layout_height="206dp"
+            android:layout_width="318dp"
+            android:layout_height="198dp"
             android:layout_gravity="center|center_vertical"
             android:layout_marginTop="16dp"
             android:scaleType="centerCrop"
