--- a/app/src/main/res/layout/activity_order_product.xml
+++ b/app/src/main/res/layout/activity_order_product.xml
@@ -3,31 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderProductActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".OrderProductActivity"
+    android:background="@color/white">
+
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Trang Bán Hàng"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:gravity="center" />
 
     <ListView
         android:id="@+id/lvProductList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/titleTextView"
         android:divider="#C6C6C6"
         android:dividerHeight="1dp" />
 
-    <Button
-        android:id="@+id/btnScanBarcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:text="Scan Barcode" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foregroundGravity="bottom"
+        android:gravity="bottom|center_horizontal">
 
-    <Button
-        android:id="@+id/btnViewCart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:text="View Cart" />
+        <Button
+            android:id="@+id/btnScanBarcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="16dp"
+            android:text="Quét Mã"
+            app:backgroundTint="#2196F3" />
 
+        <Button
+            android:id="@+id/btnViewCart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:text="Xem Giỏ Hàng"
+            app:backgroundTint="#2196F3" />
+    </LinearLayout>
 </RelativeLayout>
