--- a/app/src/main/res/layout/activity_store_page.xml
+++ b/app/src/main/res/layout/activity_store_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -50,6 +50,41 @@
         android:visibility="visible"
         app:backgroundTint="#2196F3" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/tvTitle">
+
+        <TextView
+            android:id="@+id/tvTotalRevenue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:layout_marginBottom="16dp" />
+
+        <Button
+            android:id="@+id/btnSelectDateRange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Date Range"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:layout_marginTop="16dp" />
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/chartOrder"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/btnProductPage"
         android:layout_width="239dp"
@@ -79,5 +114,20 @@
         app:backgroundTint="#2196F3"
         android:visibility="gone"
         android:layout_below="@id/btnProductPage" />
+
+    <Button
+        android:id="@+id/btnOrderHistory"
+        android:layout_width="239dp"
+        android:layout_height="66dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Lịch Sử Đơn Hàng"
+        android:textColor="@color/white"
+        android:background="@drawable/login_button_background"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        app:backgroundTint="#2196F3"
+        android:visibility="gone"
+        android:layout_below="@id/btnOrderPage" />
 
 </RelativeLayout>
