--- a/app/src/main/res/layout/activity_store_page.xml
+++ b/app/src/main/res/layout/activity_store_page.xml
@@ -21,6 +21,59 @@
         android:textColor="@color/black"
         android:layout_marginBottom="16dp" />
 
+    <LinearLayout
+        android:id="@+id/barChartLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTitle"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnOrderPage"
+            android:layout_gravity="center"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/FromDate"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:ems="10"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:inputType="date"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/ToDate"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:ems="10"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:inputType="date"
+                android:textColor="@color/black" />
+        </LinearLayout>
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/chartOrder"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:visibility="visible">
+
+        </com.github.mikephil.charting.charts.BarChart>
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tvNoStore"
         android:layout_width="match_parent"
@@ -51,21 +104,20 @@
         app:backgroundTint="#2196F3" />
 
 
-
     <Button
         android:id="@+id/btnProductPage"
         android:layout_width="239dp"
         android:layout_height="66dp"
+        android:layout_below="@+id/barChartLayout"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
+        android:background="@drawable/login_button_background"
         android:text="Trang Sản Phẩm"
         android:textColor="@color/white"
-        android:background="@drawable/login_button_background"
-        android:textStyle="bold"
         android:textSize="20dp"
-        app:backgroundTint="#2196F3"
+        android:textStyle="bold"
         android:visibility="gone"
-        android:layout_below="@id/btnAddStore" />
+        app:backgroundTint="#2196F3" />
 
     <Button
         android:id="@+id/btnOrderPage"
@@ -96,52 +148,7 @@
         app:backgroundTint="#2196F3"
         android:visibility="gone"
         android:layout_below="@id/btnOrderPage" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/btnOrderPage">
 
-        <EditText
-            android:id="@+id/FromDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:inputType="date" />
 
-        <EditText
-            android:id="@+id/ToDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:inputType="date" />
-        <TextView
-            android:id="@+id/tvTotalRevenue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:layout_marginBottom="16dp" />
-
-        <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/chartOrder"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="16dp"
-            android:visibility="visible" >
-
-        </com.github.mikephil.charting.charts.BarChart>
-
-    </LinearLayout>
 
 </RelativeLayout>
